# hexgate

./: .dockerignore  .env.sample  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  codecov.yml  m2-add-rego.md  pyproject.toml  pytest.ini  structure.md
.devcontainer/: devcontainer.json  setup.sh  start.sh
.github/workflows/: deploy-demo.yml  release.yml  tests.yml
_design/: Fortify Key Screens.html  styles.css
_design/components/: Dashboard.jsx  Graph.jsx  OtherScreens.jsx  Playground.jsx  Shell.jsx
_design/uploads/: agent-security-poc-ui.md
asianf/: __init__.py  demo.py  setup.py  stream.py  streaming.py
asianf/agent/: factory.py
asianf/cli/: __init__.py  app.py  app.tcss  state.py
asianf/config/: settings.py
asianf/prompts/: agent_system.md
asianf/tools/: __init__.py  decorators.py  fetch.py  websearch.py
asianf/tracing/: langfuse.py
asianf/utils/: retry.py
coolagents/: __init__.py  demo.py  setup.py  stream.py  streaming.py
coolagents/agent/: __init__.py  factory.py  security.py
coolagents/agents/: __init__.py  loader.py  models.py
coolagents/builtin_agents/: __init__.py
coolagents/cli/: __init__.py  app.py  serve.py  state.py
coolagents/config/: settings.py
coolagents/fortify/: __init__.py  client.py  loader.py
coolagents/runtime/: __init__.py  context.py  sandbox_runtime.py  workspace.py
coolagents/security/: __init__.py  file_scope.py  models.py  policy.py
coolagents/tools/: __init__.py  bash.py  decorators.py  fetch.py  websearch.py
coolagents/tracing/: langfuse.py
coolagents/utils/: retry.py
deploy/: README.md  _mock_llm.py  boot.py  demo_notebook.py  modal_app.py  provision.py  serve_manager.py  smoke_test.py
deploy/gateway/: app.py
docs/: .gitignore  README.md  architecture.md  audit-pipeline.md  docs.json  introduction.mdx  mint.json  package.json  pnpm-lock.yaml  policy-binding-spec.md  quickstart.mdx  rego-wasm.md  two-paths.mdx
docs/adapters/: google-adk.mdx  langchain.mdx  openai.mdx  pydantic-ai.mdx
docs/cli/: chat.mdx  policy.mdx  register.mdx  serve.mdx
docs/concepts/: audit-trail.mdx  mcp.mdx  policy-decision.mdx  signed-bundles.mdx  user-scope.mdx
docs/internals/: architecture.md  audit-pipeline.md  policy-binding-spec.md  rego-wasm.md
docs/platform/: audit-clickhouse.mdx  control-plane.mdx  dashboard.mdx  email.mdx  live-demo.mdx  overview.mdx
docs/policy/: constraints.mdx  local-override.mdx  signing.mdx  wasm-bundles.mdx  yaml-shape.mdx
docs/sdk/: index.mdx
example_agent/: agent.yaml  policy.yaml  system.md
examples/: agents.py  bash_file_agents.py  customer_bot.py  deepagent.py  demo.py  demo_policy.yaml  file_agents.py  fortify_agent_demo.py  google.py  google_demo.py  langchain.py  langchain_demo.py  mcp_demo.py  openai.py  openai_demo.py  phase7_demo.py  pydantic_ai.py  pydantic_ai_demo.py  research_agents.py
fortify/: __init__.py  audit.py  bootstrap.py  demo.py  stream.py  streaming.py  user_context.py
fortify/agent/: __init__.py  factory.py  security.py
fortify/agents/: __init__.py  factory.py  loader.py  security.py
fortify/cli/: __init__.py  _common.py  app.py  chat.py  serve.py  state.py
fortify/cloud/: __init__.py  attenuate.py  biscuit.py  client.py  loader.py
fortify/config/: settings.py
fortify/runtime/: __init__.py  command_policy.py  context.py  sandbox_runtime.py  srt.py  workspace.py
fortify/security/: __init__.py  binding.py  bundle.py  constraints.py  decision.py  enforcer.py  file_scope.py  models.py  policy.py  policy_set.py  predicates.py  rego.py  rego_wasm.py  signing.py  source.py  wasm_engine.py
fortify/streaming/: __init__.py  normalize.py
fortify/tools/: __init__.py  bash.py  decorators.py  fetch.py  refund.py  websearch.py
fortify/tracing/: langfuse.py
fortify_cli/register/: google.py  langchain.py  manifest.py  models.py  openai.py  pydantic_ai.py
hexgate/: CLAUDE.md  __init__.py  audit.py  bootstrap.py
hexgate/agents/: __init__.py  factory.py  loader.py
hexgate/cli/: __init__.py  _common.py  chat.py  (+2 more)
notebooks/: README.md
platform/: .env.prod.sample  .env.sample  .env.staging.sample  DEPLOY.md  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml
platform/api/: .env.sample  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dockerignore  audit.py  auth.py  biscuits.py  clickhouse.py  db.py  demo.py  fortify.db.pre-merge-backup  keystore.py  mailer.py  main.py  models.py  pyproject.toml  relay.py  schemas.py  seeds.py  services.py  settings.py  spa.py
platform/api/hexgate_api/: __init__.py  audit.py  auth.py  demo.py  health.py  main.py  models.py  services.py
platform/api/hexgate_api/core/: __init__.py  clickhouse.py  db.py  ids.py  keystore.py  mailer.py  spa.py
platform/api/hexgate_api/domains/: __init__.py
platform/api/hexgate_api/domains/agents/: __init__.py  router.py
platform/api/hexgate_api/domains/audit/: __init__.py  router.py
platform/api/hexgate_api/domains/chat/: __init__.py  router.py
platform/api/hexgate_api/domains/invitations/: __init__.py  router.py
platform/api/hexgate_api/domains/members/: __init__.py  router.py
platform/api/hexgate_api/domains/orgs/: __init__.py  router.py
platform/api/hexgate_api/domains/projects/: __init__.py  router.py
platform/api/hexgate_api/domains/tokens/: __init__.py  router.py
platform/api/tests/: conftest.py  test_agents.py  test_audit.py  test_auth.py  test_auth_oauth.py  test_biscuits.py  test_bundle_signing.py  test_cors.py  test_db.py  test_default_policy.py  test_invites.py  test_keystore.py  test_mailer.py  test_orgs.py  test_postgres_smoke.py  test_projects.py  test_settings.py  test_spa.py  test_tenant_isolation.py  test_ws_chat.py  test_ws_serve.py
tests/: conftest.py  test_agent_loader_local.py  test_agent_loader_registered.py  test_bootstrap.py  test_builtin_agents.py  test_cli_app.py  test_cli_state.py  test_command_policy.py  test_demo.py  test_factory.py  test_retry.py  test_security.py  test_settings.py  test_setup.py  test_srt.py  test_stream.py  test_streaming.py  test_tools.py  test_tracing.py  test_workspace.py
(+295 files in other folders)
