[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name (`pip install hexgate`). The import name stays
# `fortify` (`from fortify import ...`) — same shape as Pillow → PIL or
# beautifulsoup4 → bs4. The bare `fortify` slot on PyPI was claimed in
# 2014 by an unrelated abandoned project, so we publish under the brand
# name and let import-time keep the existing identifier.
name = "hexgate"
version = "0.1.0"
description = "HexaGate Fortify — authorization infrastructure for AI agents (agent runtime + cloud client)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bashlex>=0.18",
    "biscuit-python>=0.4",
    "cryptography>=42",
    "httpx>=0.28.1",
    "langchain",
    "langchain-openai",
    "langchain-core",
    "langfuse",
    "pydantic>=2.12.4",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "websockets>=13.0",
    "openai-agents>=0.0.10",
    "langgraph>=0.2",
    "nest_asyncio>=1.6",
    "openinference-instrumentation-openai-agents>=0.1",
    "google-adk>=1.0",
    "google-genai>=1.0",
    "litellm>=1.50",
    "openinference-instrumentation-google-adk>=0.1.11",
    "pydantic-ai-slim>=1.88.0",
    "wasmtime>=20.0",
]

[project.scripts]
fortify = "fortify.cli:run"

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.2",
]

[tool.setuptools.packages.find]
include = ["fortify*"]

[tool.setuptools.package-data]
fortify = [
    "agents/builtin/*/*.md",
    "agents/builtin/*/*.yaml",
    "agents/prompts/*.md",
]
