[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Brand-aligned naming across the surface: PyPI distribution, top-level
# import (`from hexgate import ...`), CLI binary (`hexgate chat`), and
# the `HEXGATE_*` env-var family. Renamed wholesale from `fortify` in
# 0.2.0 (the original package name was taken on PyPI by a 2014
# abandoned project; the team consolidated on `hexgate` for everything).
name = "hexgate"
version = "0.2.1"
description = "HexaGate — authorization infrastructure for AI agents (agent runtime + cloud client)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bashlex>=0.18",
    "biscuit-python>=0.4",
    "cryptography>=42",
    "httpx>=0.28.1",
    "langchain",
    "langchain-openai",
    "langchain-core",
    "langfuse",
    "pydantic>=2.12.4",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "websockets>=13.0",
    "openai-agents>=0.0.10",
    "langgraph>=0.2",
    "nest_asyncio>=1.6",
    "openinference-instrumentation-openai-agents>=0.1",
    "google-adk>=1.0",
    "google-genai>=1.0",
    "litellm>=1.50",
    "openinference-instrumentation-google-adk>=0.1.11",
    "pydantic-ai-slim>=1.88.0",
    "wasmtime>=20.0",
]

[project.scripts]
hexgate = "hexgate.cli:run"

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.2",
]

[tool.setuptools.packages.find]
include = ["hexgate*"]

[tool.setuptools.package-data]
hexgate = [
    "agents/builtin/*/*.md",
    "agents/builtin/*/*.yaml",
    "agents/prompts/*.md",
]
