[project]
name = "fortify-api"
version = "0.1.0"
description = "Fortify control plane API — policy bundles, tokens, audit ingestion"
# Matches the fortify SDK's floor (>=3.13) — the control plane now depends on
# it for compile_to_rego / compile_to_wasm.
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "pydantic>=2.9",
    "cryptography>=42",
    "biscuit-python>=0.4",
    # Async SQLite driver — required by SQLAlchemy's async engine. SQLite
    # itself is single-writer; aiosqlite just stops the event loop from
    # blocking on disk I/O. Future Postgres switch swaps this for asyncpg.
    "aiosqlite>=0.20",
    # SQLAlchemy's async engine bridges sync ORM internals to async DB
    # drivers via greenlet — it's a transitive dep but not auto-installed
    # on every distribution, so pin it explicitly.
    "greenlet>=3.0",
    # The control plane compiles + signs policy bundles at save time, so it
    # needs the SDK's compiler (compile_to_rego / compile_to_wasm). Requires
    # the `opa` binary on PATH at runtime. Unpublished local SDK — resolved
    # via [tool.uv.sources] below until it's on an index.
    "fortify",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Routes are now async; tests await responses through FastAPI's lifespan.
# `auto` mode means every `async def test_…` runs as an asyncio test
# without needing a per-test marker.
asyncio_mode = "auto"

[tool.uv]
package = false

[tool.uv.sources]
# Local, editable pointer to the Fortify SDK (asianf/). Delete this block
# once `fortify` is published to an index — the [project] dependency stays.
fortify = { path = "../..", editable = true }
